+ Changing loging
  - -l option switch the file log on
  - -lf to a special file
  - SetStatus and GetStatus switch on or off the observer

Version: V0.1B110 Date: Fri Jan 28 16:38:29 2005 +++++++++++++++++++++++++++++++
+ fix 1110577
+ finish macro module switching

Version: V0.1B111 Date: Sun Jan 30 19:02:55 2005 +++++++++++++++++++++++++++++++
+ reactivate Inventor viewer
+ build in examples
+ new view commands

Version: V0.1B112 Date: Mon Jan 31 01:57:33 2005 +++++++++++++++++++++++++++++++
+ redesign of PrefWidgets

Version: V0.1B113 Date: Fri Feb 11 00:47:38 2005 +++++++++++++++++++++++++++++++
+ realize code guidelines in Gui
+ Patch 1119485 inserted
+ Method to class Tools added to convert between SbSFImage and QImage

Version: V0.1B114 Date: Sun Feb 13 17:07:39 2005 +++++++++++++++++++++++++++++++
+ Encapsulation of 'wget' in NetworkRetriever
+ RFE 1100311 Message if wget cannot be found
+ Bug 1124689 fixed (Problems when all MDI windows closed)
+ Heavy bug in View3DInventorEx fixed
+ Check default parameter in FCParameterGrp::GetASCII() and use "" if it is 0
+ enhanced NetworkRetriever
+ loading/saving of user defined macros
+ Logging into file is working under Linux now
+ RFE 1149922 implemented (Autoscrolling at startup)

Version: V0.1B115 Date: Sun Feb 27 22:01:44 2005 +++++++++++++++++++++++++++++++
+ dummy build

Version: V0.1B116 Date: Wed Mar 16 23:19:23 2005 +++++++++++++++++++++++++++++++
+ dummy build

Version: V0.1B117 Date: Sun Mar 20 14:06:55 2005 +++++++++++++++++++++++++++++++
+ Mesh data structure added to Mesh module
+ Feature import for STL files added
+ Viewprovider for meshes added
+ Integration of latest Image module source
+ RFE 1159671 implemented (elements in alphabetic order)
+ Finishing drag&drop multible files
+ Finishing open from command line and droping on Programm icon
+ solving load dependand modules
+ more convenient Python console
+ Bug 1149706 fixed (Cannot load CAD curves)